Revert "feat: make sure all tables scroll on smaller viewports"
This reverts commit d2fffa878c7452b6346e7db15f941dd2beafca0b.

--- a/src/styles/oeb/elements.scss
+++ b/src/styles/oeb/elements.scss
@@ -184,7 +184,6 @@
 
 .oeb-main {
 	grid-area: main;
-	max-width: 100vw;
 }
 
 .oeb-footer {
